--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,20 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  sqflite: ^2.0.0+4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.13
   path: ^1.8.0
   geolocator: ^9.0.2
   google_maps_flutter: ^2.2.3
   http: ^0.13.4
   sensors_plus: ^2.0.0
-  flutter_local_notifications: ^12.0.0
-  intl: ^0.18.0
+  intl: ^0.19.0
   crypto: ^3.0.2
   shared_preferences: ^2.0.15
+  flutter_local_notifications: ^15.1.0+1
+  dropdown_search: ^5.0.6
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +53,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
